--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.MyApplication"
         >
         <activity
-            android:name=".MainActivity"
+            android:name=".MainMenuActivity"
             android:exported="true"
             android:theme="@style/Theme.MyApplication">
             <intent-filter>
@@ -27,6 +27,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+        android:name=".MainActivity"
+        android:exported="true"
+        android:theme="@style/Theme.MyApplication" />
+        <activity android:name=".HistoryActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MyApplication" />
+        <activity android:name=".RouteDetailsActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MyApplication" />
+
 
 
         <meta-data
